--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "next": "16.0.6",
+    "next": "16.0.8",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-server-dom-parcel": "19.0.1",
+    "react-server-dom-webpack": "19.0.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
